[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-samples"
version = "0.1.0"
description = "Hands on Agent Development Kit(ADK)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "black",
    "pytest",
    "pytest-cov",
    "google-adk",
    "python-dotenv",
    "yfinance>=0.2.63",
    "langchain-core>=0.3.65",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "mypy",
    "isort>=5.13",
    "IPython",
]

[project.urls]
"Homepage" = "https://github.com/caron14/adk-samples"
"Bug Tracker" = "https://github.com/caron14/adk-samples/issues"

[tool.setuptools]
packages = ["agents"]

# Removing the packages.find section as it conflicts with explicit package definition
# If we want to use find_packages later, we can re-enable this in a compatible way

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
